# malc5290_EN605.617.FA

module0/: build.sh  helloworld
module10/: HelloWorld.cl  HelloWorld.cpp.orig  Makefile  my_gpu_helper.h  run.sh
module11/: assignment.cl  assignment.cpp  run.sh
module12/: .assignment.cpp.swp  .performance_helper.h.swp  assignment.cl  assignment.cpp  performance_helper.h  run.sh
module13/: .gitginore  .ycm_extra_conf.py  Makefile  assignment.cl  assignment.cpp  mat1024  mat256  mat512  random-matrix.py  run.sh
module3/: assignment.cu  results  run.sh
module4/: Makefile  assignment.cu  run.sh  run_results
module5/: Makefile  assignment.cu  assignment.h
module6/: assignment.cu  run.sh
module7/: .assignment.cu.swp  .ycm_extra_conf.py  assignment.cu  mat512_add  mat512_div  mat512_mul  mat512_sub  run.sh
module8/: Makefile  assignment.cu  assignment.h  run.sh
module9/assignment_npp/: .ycm_extra_conf.py  Makefile  assignment.cu
module9/assignment_nvgraph/: Makefile  assignment.cu  my_helper.h  run.sh
module9/assignment_thrust/: assignment.cu  run.sh
module9/boxFilterNPP/: Makefile
module9/thrust_examples/: Makefile  thrust_example.cu
project/: .gitignore  CMakeLists.txt  README  TODO
project/.clangd/index/: FMatrixDriver.hpp.45DD015B3CCCCF4E.idx  Matrix.hpp.56B8724EC8379E8E.idx  Matrix.hpp.66172A8B183E92DE.idx  MatrixDriver.hpp.BFD6C3B06D1D0070.idx  MatrixDriver_impl.cpp.F94CEB68297F861B.idx  base_driver.hpp.7FAA09CA05A1F87D.idx  bin_helper.hpp.E4152963E045FC3F.idx  cublas_driver.cpp.42CFFE3E0F186D86.idx  cublas_driver.cu.B415369896429888.idx  cublas_driver.hpp.B137CB3B137BB4AF.idx  cublasmult.cpp.6E1AB80E0D7A1411.idx  cutlass_driver.cu.11551449ABF8B16B.idx  cutlass_driver.hpp.55F15FCC67E5F6C0.idx  cutlass_helper.h.A75AF262C0E4E1CE.idx  cutlassmult.cpp.2A3226D8938BDEF2.idx  cutlasstest.cpp.7D1D400E31CE6D17.idx  matrix_helper.hpp.3EAE05CD85F2CE38.idx  naive_driver.cu.9FB5790A02C7BFA6.idx  naive_driver.hpp.5D467DD76F4B8B3E.idx  naivemult.cpp.FF4EAB768B718414.idx  performance_helper.hpp.4E07508BB766C193.idx  temp_driver.cpp.225F0FE17B5FFF01.idx  temp_driver.hpp.70E8EAA76B63D90C.idx  test.cpp.672852177F8CCDF5.idx
project/src/: CMakeLists.txt
project/src/driver/: Matrix.hpp  MatrixDriver.hpp  base_driver.hpp  cublas_driver.cu  cublas_driver.hpp  cutlass_driver.cu  cutlass_driver.hpp  naive_driver.cu  naive_driver.hpp  performance_helper.hpp  temp_driver.cpp  temp_driver.hpp  test.cpp
project/src/matrix/: Matrix.hpp  matrix_helper.hpp
project/util/matrix-gen/: matrix-result-writer.py  testmat128_256a  testmat256_256a  testmat3_2a  testmat3_2b  testmat5_5a  testmat5_5b
project/util/matrix-gen/test/: command  cublasmult-driver  mat_3_2_3_data.csv  mat_matrix_multiplication_algorithms_data.csv  test.py
project/util/scripts/: identity-matrix.py  random-dense-matrix.py  run.sh
project/util/sparse-scripts/: matrix-result-writer.py  random-dense-matrix.py  random-matrix.py  run.sh
